# library

./: docker-compose.yml
backend/: Dockerfile
backend/src/: pyproject.toml
backend/src/config/: schema.py  settings.py  urls.py
backend/src/library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
