[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Alexander Golovnya <algol.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphene-django = "^2.12.1"
django = "3.0.5"
djongo = "^1.3.3"
django-graphql-jwt = "^0.3.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
